--- a/parent/todo.txt
+++ b/parent/todo.txt
@@ -1,3 +1,6 @@
+- create and update should be two different operations from UI to db
+- Every html page should be a jsp
+
 - Tenants CRUD
 - Things CRUD
 - Users CRUD
@@ -11,3 +14,8 @@
 - AccessControlPolicy CRUD
 - Spaces CRUD
  
+ 
+ - is ControllerAdvice with ExceptionHandler working?
+ - is Controller level validations working?
+ - is service level validations working?
+ - is PermissionEvaluator working?
